--- a/README.org
+++ b/README.org
@@ -157,18 +157,19 @@
     * [[file:/coding/31_下一个排列.py][31.下一个排列]]
     * [[file:/coding/36_有效的数独.org][36.有效的数独]]
     * [[file:/coding/48_旋转图像.org][48.旋转图像]]
+    * [[file:./coding/134_加油站.org][134.⛽️]]
     * [[file:./coding/169_多数元素.py][169.多数元素😄]]
     * [[file:/coding/201_数字范围按位与.org][201.数字范围按位与]]
     * [[file:/coding/240_搜索二维矩阵II.py][240.搜索二维矩阵 II😄]]
+    * [[file:./coding/268_缺失数字.org][268.缺失数字]]
+    * [[file:./coding/384_打乱数组.org][384.打乱数组]]
     * [[file:/coding/621_任务调度器.org][621.任务调度器]]
     * [[file:/coding/932_漂亮数组.org][932.漂亮数组]]
     * [[file:./coding/973_最接近原点的k个点.py][973.最接近原点的k个点]]
     * [[file:/coding/1267_统计参与通信的服务器.org][1267.统计参与通信的服务器]]😁
-    * [[file:/coding/面试题_主要元素.org][面试题_主要元素-摩尔投票法]]
+    * [[file:/coding/1387_将整数按权重排序.org][1387.将整数按权重排序]]😁
     * [[file:/coding/2出现的次数.org][面试题_2出现的次数]]🤒️
-    * [[file:./coding/384_打乱数组.org][384.打乱数组]]
-    * [[file:./coding/268_缺失数字.org][268.缺失数字]]
-    * [[file:./coding/134_加油站.org][134.⛽️]]
+    * [[file:/coding/面试题_主要元素.org][面试题_主要元素-摩尔投票法]]
 **** 双指针
      + [[file:./coding/11_成最多水的容器.py][11.盛最多水的容器]]
      + [[file:./coding/15_三数之和.py][15.三数之和😂]]
@@ -205,10 +206,11 @@
     * [[file:/coding/142_环形链表II.py][面试题_环路检测]]
     * [[file:./coding/面试题35复杂链表的复制.py][面试题35复杂链表的复制]]
 **** BFS
+    * [[file:./coding/127_单词接龙.py][127.单词接龙]]👖
+    * [[file:/coding/133_克隆图.org][133.克隆图]]
     * [[file:/coding/199_二叉树的右视图.org][199.二叉树的右视图]]😁
     * [[file:./coding/301_删除无效的括号.py][301.删除无效的括号]]
     * [[file:./coding/节点间通路.org][节点通路]]
-    * [[file:./coding/127_单词接龙.py][127.单词接龙]]👖
     * [[file:./coding/886_可能的二分法.py][886.可能的二分法➕]]
 **** DFS
     * [[file:/coding/17_电话号码的字母组合.org][17.电话号码的字母组合]]
